--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.1",
     "nodemon": "^3.1.11",
+    "path-to-regexp": "^0.1.7",
     "xss-clean": "^0.1.4",
     "zod": "^3.24.1"
   }
